# gigatoken

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  ci-tokenforge.yml  wheels.yml
benches/: encode.rs  encode_doc.rs  encode_st.rs  encode_st_sp.rs  pretokenize.rs  pretokenize_profile.rs  pretokenize_profile_all.rs  unicode.rs
benches/common/: mod.rs
benchmarks/compare/: results.py
examples/: bench_char_check.rs  bench_collision_check.rs  bench_word_count.rs  cache_memory.rs
gigatok/: _hf_compat.py  _tokenizer.py
gigatok/_load/: hf.py  hub.py  sentencepiece.py  tiktoken.py
gigatok/gigatok_rs/: __init__.pyi
gigatoken/: __init__.py  _cli.py  _hf_compat.py  _parallel.py  _tiktoken_compat.py  _tokenizer.py
gigatoken-sp/: Cargo.toml
gigatoken-sp/src/: lib.rs  sentencepiece.rs
gigatoken-wordpiece/: Cargo.toml
gigatoken-wordpiece/src/: lib.rs  wordpiece.rs
gigatoken/_load/: hf.py  hub.py
gigatoken/gigatoken_rs/: __init__.pyi
jeton/: __init__.py
jeton/_load/: tiktoken.py
jeton/jeton_rs/: __init__.pyi
notebooks/: bit_patterns.py  bit_patterns2.py  data_view.py  dfa_states.py  inspect_tokenizers.py  luke_ref.py  simd_unicode.py  unicode.py
profiling/: ab_bench.py  analyze.py  analyze_mt.py  campaign_report.md  mt_round3_findings.md  profile.sh
profiling/mt3_analysis/: mt_report.txt
scripts/: build_release_cross_platform.py
src/: batch.rs  bpe.rs  bpe_train.rs  lib.rs  main.rs  pretokenize.rs  test_hub.rs  token.rs  unicode_tables.rs  utils.rs
src/bindings/: bridge.rs  hub.rs  mod.rs  padding.rs  pretokenize.rs  sources.rs  train.rs
src/bpe/: mod.rs  pretoken_cache.rs  sentencepiece.rs  tiktoken.rs
src/encode/: mod.rs  tiktoken_radix.rs
src/input/: bytes.rs  decompress.rs  file_source.rs  jsonl.rs  mod.rs  py.rs
src/load_tokenizer/: hf.rs  hub.rs  mod.rs  tiktoken.rs
src/pretokenize/: mod.rs  options.rs  pretoken.rs  pretoken_avx512.rs  pretoken_chunks.rs  pretoken_combinator.rs  pretoken_combinator_scalar.rs  pretoken_fast.rs  pretoken_state_machine.rs  pretokenize_traits.rs  simd.rs  unicode.rs
src/simd/: mod.rs
tests/: bench_file_source.py  bench_train_encode.py  conftest.py  dclm_fixture.py  hf_cache.py  test_bpe_train.py  test_bpe_train_compare.py  test_config_dispatch.py  test_encode.py  test_encode_dclm.py  test_encode_files.py  test_file_source.py  test_from_hf.py  test_from_tiktoken.py  test_hf_compat.py  test_load_hf.py  test_multiprocessing.py  test_pretokenizer_iterator.py  test_sentencepiece.py  test_tiktoken_compat.py  test_tokenizer_usage.py
tests/scripts/: build_hf_tokenizer.py  build_toker_tokenizer.py
tests/tokenizers/: conftest.py  test_chunked_doc.py  (+1 more)
toker/: __init__.py
(+22 files in other folders)
