[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "toker"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy>=1.24.4"]

[tool.maturin]

features = ["pyo3/extension-module"]
module-name = "toker.toker_rs"


[tool.uv]
package = true
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = ".cargo/config.toml" },
    { file = "rust-toolchain.toml" },
    { file = "**/*.rs" },
]

[dependency-groups]
dev = [
    "altair>=5.4.1",
    "ipython>=8.12.3",
    "marimo>=0.8.22",
    "matplotlib>=3.7.5",
    "polars>=1.8.2",
    "protobuf>=5.29.5",
    "pytest>=8.3.5",
    "rich>=14.1.0",
    "tiktoken>=0.7.0",
    "tokenizers>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.17.0",
]
