[build-system]
requires = ["maturin>=1.14.1,<2.0"]
build-backend = "maturin"

[project]
name = "gigatok"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    # Everything down to awkward 2.0.0 passes the test suite, but 2.6.3 is the
    # first release compatible with NumPy 2.x, which the numpy floor permits.
    "awkward>=2.6.3",
    # rust-numpy supports numpy >= 1.16; 1.24.4 (verified) keeps headroom.
    "numpy>=1.24.4",
]

[tool.maturin]
module-name = "gigatok.gigatok_rs"


[tool.uv]
package = true
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = ".cargo/config.toml" },
    { file = "rust-toolchain.toml" },
    { file = "**/*.rs" },
]

[dependency-groups]
dev = [
    "altair>=5.4.1",
    "ipython>=8.12.3",
    "marimo>=0.8.22",
    "matplotlib>=3.7.5",
    "polars>=1.8.2",
    "protobuf>=5.29.5",
    "pytest>=8.3.5",
    "rich>=14.1.0",
    "ruff>=0.15.7",
    "tiktoken>=0.7.0",
    "tokenizers>=0.21.0",
    "tqdm>=4.67.1",
    "zstandard>=0.23.0",
    "huggingface-hub>=0.20.0",
    "transformers>=4.17.0",
    "ty>=0.0.25",
]

[tool.ruff]
line-length = 180

[tool.ty.src]
exclude = ["notebooks"]
